# pill-eater2000

./: .gitignore  CMakeLists.txt  README.md  joelsimo_main.c  latest code  libcommon.h  libpwm.h  librom.h  libuart.h  main  main.c  seterr.h
joelsimo_files/: lab1.c  lab2.c  lab3.c  lab4.c  lab5a.c  lab5b_wip.c
melikam_files/: lab-1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab_5_2.c
pavels_files/: PWM-something.main.c  PWM2.main.c  ROM.main.c  UART.main.c  WIP-memwrite.main.c  source.tar  stepper.main.c
